--- a/style.css
+++ b/style.css
@@ -13,15 +13,17 @@ th,
 tr,
 td {
   border: 2px solid black;
-  margin-right: 150px;
+  margin-right: 15px;
   padding: 10px;
   background-color: bisque;
+  border-radius: 4.5px;
 }
 body {
   background-color: beige;
 }
 h1 {
   text-align: center;
+  text-decoration: underline;
 }
 h3 {
   text-align: center;
@@ -32,4 +34,13 @@ h4 {
 legend {
   color: black;
   font-size: medium;
+  font-weight: bold;
+}
+caption {
+  font-size: medium;
+  font-weight: bold;
+}
+
+#dateyeartax {
+  margin-right: 357px;
 }
